# apple_store_stock

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
src/apple_store_stock/: __init__.py  app.py  core.py
src/apple_store_stock/web/: index.html
tests/: test_app.py
